Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
	char Numero[14];
	int COO_Cupom;
	int COO_Dav;
	char Titulo[31];
	double Valor;
	double DtEmissao;
} DAVsRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;



typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_GetNumUltItem(const INTPTR ecfHandle);

DllImport int ECF_GetNumVersao(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetOperador(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPAF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetParity(const INTPTR ecfHandle);

DllImport int ECF_GetPorta(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPoucoPapel(const INTPTR ecfHandle);

DllImport int ECF_GetRelatoriosGerenciais(const INTPTR ecfHandle, RelatorioGerencialRec* relatorio, const int index);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRFDID(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSoftFlow(const INTPTR ecfHandle);

DllImport int ECF_GetStopBits(const INTPTR ecfHandle);

DllImport int ECF_GetSubModeloECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTermica(const INTPTR ecfHandle);

DllImport int ECF_GetTimeOut(const INTPTR ecfHandle);

DllImport int ECF_GetTotalAcrescimos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalAcrescimosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencao(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencaoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributado(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalPago(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributaria(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalTroco(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetUltimoErro(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetUsuarioAtual(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetVendaBruta(const INTPTR ecfHandle, double* value);

DllImport int ECF_IdentificaConsumidor(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_IdentificaPAF(const INTPTR ecfHandle, const PCHAR nomeVersao, const PCHAR md5);

DllImport int ECF_LegendaInmetroProximoItem(const INTPTR ecfHandle);

DllImport int ECF_LeituraMemoriaFiscalArquivoData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalArquivoReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalSerialData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_LeituraMemoriaFiscalSerialReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_LeituraX(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisAliquota(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisComprovanteNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisFormaPagamento(const INTPTR ecfHandle);

DllImport int ECF_LinhaCupomVinculado(const INTPTR ecfHandle, const PCHAR linha);

DllImport int ECF_LinhaRelatorioGerencial(const INTPTR ecfHandle, const PCHAR linha, const int indiceBMP);

DllImport int ECF_PafMF_GerarCAT52(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Cotepe1704(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Cotepe1704_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Espelho_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Impressao(const INTPTR ecfHandle, const double DataInicial, const double DataFinal);

DllImport int ECF_PafMF_LMFC_Impressao_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal);

DllImport int ECF_PafMF_LMFS_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFS_Espelho_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFS_Impressao(const INTPTR ecfHandle, const double DataInicial, const double DataFinal);

DllImport int ECF_PafMF_LMFS_Impressao_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal);

DllImport int ECF_PafMF_LX_Impressao(const INTPTR ecfHandle);

DllImport int ECF_PafMF_MFD_Cotepe1704(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Cotepe1704_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Espelho_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_RelDAVEmitidos(const INTPTR ecfHandle, const DAVsRec DAVs[], const int index, const PCHAR TituloRelatorio, const PCHAR IndiceRelatorio);

DllImport int ECF_PafMF_RelIdentificacaoPafECF(const INTPTR ecfHandle, const INTPTR aacHandle, const int IndiceRelatorio);

DllImport int ECF_PafMF_RelMeiosPagamento(const INTPTR ecfHandle, const FormaPagamentoRec formasPagamento[], const int count, const PCHAR TituloRelatorio, const int IndiceRelatorio);

DllImport int ECF_ProgramaAliquota(const INTPTR ecfHandle, const double aliquota, const char tipo, const PCHAR posicao);

DllImport int ECF_ProgramaComprovanteNaoFiscal(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR tipo, const PCHAR posicao);

DllImport int ECF_ProgramaFormaPagamento(const INTPTR ecfHandle, const PCHAR descricao, const BOOL permiteVinculado, const PCHAR posicao);

DllImport int ECF_ProgramaRelatoriosGerenciais(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR posicao);

DllImport int ECF_PulaLinhas(const INTPTR ecfHandle, const int numLinhas);

DllImport int ECF_ReducaoZ(const INTPTR ecfHandle);

DllImport int ECF_RegistraItemNaoFiscal(const INTPTR ecfHandle, const PCHAR codCNF, const double value, const PCHAR obs);

DllImport int ECF_Sangria(const INTPTR ecfHandle, const double valor, const PCHAR obs);