Projetos/ACBrFramework/ACBrFramework.OCX/Defs/ACBrECF.bas

Public Declare Function ECF_GetNumUltItem Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetNumVersao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetOperador Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetPAF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetParity Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetPorta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetPoucoPapel Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetRelatoriosGerenciais Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef relatorio As RelatorioGerencialRec, ByVal index As Long) As Long
Public Declare Function ECF_GetRespostaComando Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetRFDID Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetSoftFlow Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetStopBits Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetSubModeloECF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetSubTotal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTermica Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetTimeOut Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetTotalAcrescimos Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalAcrescimosISSQN Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalCancelamentos Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalCancelamentosISSQN Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalDescontos Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalDescontosISSQN Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalIsencao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalIsencaoISSQN Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalNaoTributado Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalNaoTributadoISSQN Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalPago Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalSubstituicaoTributaria Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalSubstituicaoTributariaISSQN Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetTotalTroco Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetUltimoErro Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetUsuarioAtual Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetVendaBruta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_IdentificaConsumidor Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal cpfCnpj As String, ByVal nome As String, ByVal endereco As String) As Long
Public Declare Function ECF_IdentificaPAF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal nomeVersao As String, ByVal md5 As String) As Long
Public Declare Function ECF_LegendaInmetroProximoItem Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_LeituraMemoriaFiscalArquivoData Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal dataInicial As Double, ByVal dataFinal As Double, ByVal nomeArquivo As String, ByVal simplificada As Boolean) As Long
Public Declare Function ECF_LeituraMemoriaFiscalArquivoReducao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal reducaoInicial As Long, ByVal reducaoFinal As Long, ByVal nomeArquivo As String, ByVal simplificada As Boolean) As Long
Public Declare Function ECF_LeituraMemoriaFiscalData Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal dataInicial As Double, ByVal dataFinal As Double, ByVal simplificada As Boolean) As Long
Public Declare Function ECF_LeituraMemoriaFiscalReducao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal reducaoInicial As Long, ByVal reducaoFinal As Long, ByVal simplificada As Boolean) As Long
Public Declare Function ECF_LeituraMemoriaFiscalSerialData Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal dataInicial As Double, ByVal dataFinal As Double, ByVal simplificada As Boolean, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_LeituraMemoriaFiscalSerialReducao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal reducaoInicial As Long, ByVal reducaoFinal As Long, ByVal simplificada As Boolean, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_LeituraX Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_LerTotaisAliquota Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_LerTotaisComprovanteNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_LerTotaisFormaPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_LinhaCupomVinculado Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal linha As String) As Long
Public Declare Function ECF_LinhaRelatorioGerencial Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal linha As String, ByVal indiceBMP As Long) As Long
Public Declare Function ECF_PafMF_GerarCAT52 Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFC_Cotepe1704 Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFC_Cotepe1704_CRZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal CRZInicial As Long, ByVal CRZFinal As Long, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFC_Espelho Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFC_Espelho_CRZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal CRZInicial As Long, ByVal CRZFinal As Long, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFC_Impressao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double) As Long
Public Declare Function ECF_PafMF_LMFC_Impressao_CRZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal CRZInicial As Long, ByVal CRZFinal As Long) As Long
Public Declare Function ECF_PafMF_LMFS_Espelho Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFS_Espelho_CRZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal CRZInicial As Long, ByVal CRZFinal As Long, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_LMFS_Impressao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double) As Long
Public Declare Function ECF_PafMF_LMFS_Impressao_CRZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal CRZInicial As Long, ByVal CRZFinal As Long) As Long
Public Declare Function ECF_PafMF_LX_Impressao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_PafMF_MFD_Cotepe1704 Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_MFD_Cotepe1704_COO Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal COOInicial As Long, ByVal COOFinal As Long, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_MFD_Espelho Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal DataInicial As Double, ByVal DataFinal As Double, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_MFD_Espelho_COO Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal COOInicial As Long, ByVal COOFinal As Long, ByVal CaminhoArquivo As String) As Long
Public Declare Function ECF_PafMF_RelDAVEmitidos Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef DAVs() As DAVsRec, ByVal index As Long, ByVal TituloRelatorio As String, ByVal IndiceRelatorio As String) As Long
Public Declare Function ECF_PafMF_RelIdentificacaoPafECF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal aacHandle As Long, ByVal IndiceRelatorio As Long) As Long
Public Declare Function ECF_PafMF_RelMeiosPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef formasPagamento() As FormaPagamentoRec, ByVal count As Long, ByVal TituloRelatorio As String, ByVal IndiceRelatorio As Long) As Long
Public Declare Function ECF_ProgramaAliquota Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal aliquota As Double, ByVal tipo As String, ByVal posicao As String) As Long
Public Declare Function ECF_ProgramaComprovanteNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal descricao As String, ByVal tipo As String, ByVal posicao As String) As Long
Public Declare Function ECF_ProgramaFormaPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal descricao As String, ByVal permiteVinculado As Boolean, ByVal posicao As String) As Long
Public Declare Function ECF_ProgramaRelatoriosGerenciais Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal descricao As String, ByVal posicao As String) As Long
Public Declare Function ECF_PulaLinhas Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal numLinhas As Long) As Long
Public Declare Function ECF_ReducaoZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_RegistraItemNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal codCNF As String, ByVal value As Double, ByVal obs As String) As Long
Public Declare Function ECF_Sangria Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal valor As Double, ByVal obs As String) As Long
